--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
   "author": "Alejandro Martinez",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.10.0",
+    "mysql2": "^2.2.5",
+    "sequelize": "^6.6.2",
     "swagger-ui-express": "^4.1.6",
     "yamljs": "^0.3.0"
   },
