--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "API delilah resto online orders",
   "main": "server.js",
   "scripts": {
-    "dev": "nodemon server"
+    "dev": "nodemon server",
+    "lint": "eslint --ignore-path .gitignore ."
   },
   "author": "Alejandro Martinez",
   "license": "ISC",
@@ -25,6 +26,10 @@
   "devDependencies": {
     "colors": "^1.4.0",
     "eslint": "^7.24.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.23.2",
     "nodemon": "^2.0.7"
   }
 }
