--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "dev": "nodemon server",
-    "lint": "eslint --ignore-path .gitignore ."
+    "lint": "eslint --ignore-path .gitignore .",
+    "precommit": "eslint --ignore-path .gitignore ."
   },
   "author": "Alejandro Martinez",
   "license": "ISC",
@@ -30,6 +31,7 @@
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.1",
+    "husky": "^6.0.0",
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1"
   }
