--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mysql2": "^2.2.5",
     "sequelize": "^6.6.2",
     "swagger-ui-express": "^4.1.6",
+    "uuid": "^8.3.2",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
